# egg-n-bacon-housing

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  20250219-phase-validation-summary.md  AGENTS.md  ANALYTICS_ACCESSIBILITY_TEST_VERIFICATION.md  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  REORGANIZATION_SUMMARY.md  config.yaml  demo_pipeline.py  environment.yml  environmental.yml  feature_analysis_output.txt  feature_importance_random_split.txt  forecasts_for_report.csv  jupytext.toml  main.py  package-lock.json  package.json  pyproject.toml  regional_forecasts_final.csv  regional_forecasts_realistic.csv  run_real_pipeline.py  streamlit_app.py  test_pipeline_setup.py
.claude/handoffs/: 2026-02-23-interactive-segments-dashboard-implementation.md  20260316-recharts-warning-followup.md
.context7/: astro-best-practices.md
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.github/workflows/: ci.yml  deploy-app.yml  deploy-backend.yml  deploy.yml  docs-layout.yml  e2e.yml  lint.yml  security.yml  test.yml
.planning/: OVERVIEW.md  STATE.md  STYLE.md
.planning/analysis/: 20260215-price-appreciation-modeling-brainstorm.md  20260216-price-appreciation-modeling-findings.md
.planning/codebase/: 20260203-school-features-optimization.md  20260203-tech-debt-mitigation.md  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
app/: CHANGELOG.md  README.md  astro.config.mjs  content.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.mjs  test_analytics.mjs  test_analytics_layers.py  test_export.mjs  tsconfig.json
app/.astro-cache/: data-store.json
app/scripts/: sync-catalog.mjs
app/src/: content.config.ts
apps/: 1_market_overview.py  2_price_map.py  3_trends_analytics.py  4_market_insights.py  README.md  dashboard.py  google_api.py  google_api2.py  single_agent.py  single_agent2.py  spiral.py  spiral3.py
apps/market_insights/: 4a_segments.py  4b_tier_analysis.py  4c_town_leaderboard.py
backend/: CHANGELOG.md  README.md  astro.config.mjs  package.json
backend/.astro/: content.d.ts  data-store.json  settings.json
core/: cache.py  config.py  data_helpers.py  data_loader.py  error_handling.py  geocoding.py  map_utils.py  metrics.py  mrt_distance.py  ui_components.py
core/pipeline/: L0_collect.py  L1_process.py  L2_features.py  L2_rental.py  L3_export.py  L4_analysis.py
data/: .gitignore  L1.dvc  L2.dvc  L3.dvc  metadata.json  metadata.json.bak2  parquets  raw_data.dvc
data/analysis/: L4_analysis_report.md
data/analytics/: 20260203-school-impact-analytics-report.md  backtesting_baseline_results.txt  var_backtesting_results.txt
data/catalog/: catalog.jsonl  descriptions.yml
data/checkpoints/: L2_housing_unique_searched_checkpoint_1.parquet
data/config/: mrt_lines.json  mrt_stations.json  (+1 more)
docs/: 20250120-architecture.md  20250120-data-pipeline.md  20250120-migration-summary.md  20250120-pipeline-test-results.md  20250120-running-real-pipeline.md  20260121-background-geocoding-guide.md  20260121-geocoding-implementation.md  20260121-pipeline-progress-report.md  20260122-geocoding-batched-restart.md  20260122-logging-fix.md  CSV_DOWNLOAD_GUIDE.md  README.md  TROUBLESHOOTING.md  WEBAPP_FIX_SUMMARY.md  architecture.md  data-sources.md  testing-guide.md  usage-guide.md
notebooks/: 20260123_hdb_eda_investment_analysis.py  L0_datagovsg.ipynb  L0_datagovsg.py  L0_image_gen.ipynb  L0_image_gen.py  L0_onemap.ipynb  L0_onemap.py  L0_webscrap_jina.ipynb  L0_webscrap_jina.py  L0_wiki.ipynb  L0_wiki.py  L1_ura_transactions_processing.ipynb  L1_ura_transactions_processing.py  L1_utilities_processing.ipynb  L1_utilities_processing.py  L2_sales_facilities.ipynb  L2_sales_facilities.py  L2_utilities_processing.ipynb  L3_sales_facilities.ipynb  L3_upload_DB.ipynb  L3_upload_s3.ipynb  L3_upload_s3.py  L4_s3_databricks_catalog.py  ZZ_Databricks Test Query.py  ZZ_pyspark-dataframe-loader-langchain.py  ZZ_spark-dataframe-agent-langchain.py  ZZ_sql-database-agent-langchain.py  datagovsg.ipynb  gemini-simple-call.ipynb  grab_from_s3.ipynb  hexgrid_test.ipynb  hexgrid_test.py  onemap.ipynb  pandas_agent.ipynb  pandas_agent.py  ura_transactions_processing.ipynb  visualize_feature_importance.ipynb  visualize_feature_importance.py
scripts/: 00_sync_data.py  01_ingest.py  02_clean.py  03_features.py  04_export.py  05_metrics.py  99_cleanup.py  CODING_STANDARDS.md  PIPELINE_GUIDE.md  README.md  analyze_amenity_impact.py  analyze_feature_importance.py  analyze_hdb_rental_market.py  analyze_lease_decay.py  calculate_l3_metrics.py  calculate_school_features.py  calculate_school_features_v2.py  calculate_school_features_v3.py  compress_json_files.py  create_l3_unified_dataset.py  create_market_segmentation.py  create_period_segmentation.py  detect_anomalies.py  download_amenity_data.py  download_hdb_rental_data.py  download_phase2_amenities.py  download_ura_rental_index.py  enhance_geocoding.py  fix_school_distances.py  generate_catalog.py  generate_segments_data.py  geocode_addresses.py  geocode_addresses_batched.py  prepare_analytics_json.py  prepare_interactive_tools_data.py  prepare_webapp_data.py  process_amenities.py  quick_amenity_grid.py  quick_cluster_profiles.py  run_pipeline.py  (+7 more)
src/: __init__.py  cache.py  config.py  data_helpers.py  geocoding.py  metrics.py  network_check.py
tests/: README_TEST_REVIEW.md  conftest.py  test_analytics_export.py  test_cache.py  test_catalog_generator.py  test_cleaning_validation.py  test_condo_ingestion.py  test_config.py  test_configure.py  test_data_helpers.py  test_data_loader.py  test_data_loader_extended.py  test_datagovsg.py  test_export.py  test_features.py  test_geocoding.py  test_ingestion.py  test_metrics.py  test_mrt_distance.py  test_mrt_enhanced.py  test_mrt_integration.py  test_onemap.py  test_pipeline.py  test_pipeline_integration.py  test_pipeline_setup.py  test_property_based.py  test_proximity.py  test_rental_yield_metrics.py  test_school_features.py  test_segments_data.py  test_validation_gateway.py
(+927 files in other folders)
