[project]
name = "egg-n-bacon-housing"
version = "0.2.0"
description = "Singapore housing data pipeline with ML analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.24.0",
    "scikit-learn",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "geopandas",
    "requests",
    "boto3",
    "rapidfuzz>=3.14.3",
    "scipy>=1.17.0",
    "sf-hamilton>=1.0",
    "tenacity",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pytest>=8.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "coverage[toml]>=7.0.0",
    "ruff>=0.3",
    "geopandas>=1.1.2",
    "shapely>=2.1.2",
    "playwright>=1.58.0",
    "pre-commit>=3.0.0",
    "mypy>=1.8.0",
    "pip-audit>=2.0.0",
    "hypothesis>=6.155.1",
]

analytics = [
    "beautifulsoup4",
    "cachetools>=6.2.4",
    "esda>=2.8.1",
    "h3==4.1.0b2",
    "ipywidgets",
    "kaleido>=1.2.0",
    "langchain>=0.3.0",
    "langchain-community",
    "langchain-experimental==0.3.0",
    "langchain-google-genai==2.0.0",
    "langgraph==0.2.32",
    "langgraph-checkpoint==2.0.0",
    "libpysal>=4.14.1",
    "lifelines>=0.27.0",
    "marimo>=0.19.6",
    "patsy>=1.0.2",
    "plotly>=6.5.2",
    "polars>=1.40.0",
    "prophet>=1.2.1",
    "pygwalker",
    "seaborn",
    "shap>=0.49.1",
    "statsmodels>=0.14.0",
    "supabase",
    "tabulate==0.9.0",
    "xgboost>=3.1.3",
]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/egg_n_bacon_housing"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.py" = ["E402", "E722", "F821", "F841"]
"notebooks/**/*.py" = ["E402", "E722", "F821", "F841"]
"src/egg_n_bacon_housing/components/*.py" = ["N999"]  # Numbered stage files like 01_ingestion.py

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=egg_n_bacon_housing",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
]

markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, may use external resources)",
    "slow: Slow tests (should be run infrequently)",
    "api: Tests that make API calls (may need mocking)",
]

[tool.coverage.run]
source = ["egg_n_bacon_housing"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
# Mypy type checking configuration
# Strategy: Gradual strict mode - start with basic checking, enable strict as type hints improve
python_version = "3.12"
files = [
    "src/egg_n_bacon_housing/components",
    "src/egg_n_bacon_housing/adapters",
    "src/egg_n_bacon_housing/utils/cache.py",
    "src/egg_n_bacon_housing/utils/contracts.py",
    "src/egg_n_bacon_housing/utils/geocoding.py",
    "src/egg_n_bacon_housing/utils/io_helpers.py",
    "src/egg_n_bacon_housing/utils/layer_writer.py",
    "src/egg_n_bacon_housing/utils/metrics.py",
    "src/egg_n_bacon_housing/utils/proximity.py",
    "src/egg_n_bacon_housing/utils/time_index.py",
    "src/egg_n_bacon_housing/utils/validation_gateway.py",
    "src/egg_n_bacon_housing/pipeline.py",
    "src/egg_n_bacon_housing/config.py",
    "tests",
]
# strict = true  # TODO: Enable strict mode gradually as type hints are added
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
disable_error_code = ["import-untyped"]

# Known issues to address gradually:
# 1. SecretStr fields in config.py - pydantic-settings compatibility with strict mode

# Keep targeted overrides limited to modules that are still checked by our current mypy scope.
# TODO: tighten this override once config.py gets proper type hints.

[[tool.mypy.overrides]]
module = "egg_n_bacon_housing.config"
ignore_errors = true
